# AutoPR

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: docker-build.yml  e2e.yml  integration.yml  lint.yml  quality.yml  security.yml  test.yml
apps/api/: main.py
apps/cli/: github_ops.py
apps/worker/: main.py
configs/: llm_models.yaml  policies.yaml  settings.py
core/agents/: runner_logging.py
core/contracts/: agent_outputs.py  code.py  enums.py  plan.py  pr.py  qa.py  review.py  run_context.py  triage.py
core/orchestrator/: coordinator.py  models.py  resume.py  state_machine.py  transitions.py
core/policies/: comments.py  engine.py  merge_policy.py  risk_scoring.py
docker/: api.Dockerfile  docker-compose.yml  grafana-datasources.yaml  loki-config.yaml  otel-collector.yaml  prometheus.yml  tempo.yaml  worker.Dockerfile
infra/github/: auth.py  client.py  issues.py  models.py  webhook_handler.py
infra/llm/: callbacks.py  chains.py  client.py  gateway.py  parser.py  pricing.py  prompts.py  rate_limit.py  registry.py
infra/qa/: __init__.py  aggregator.py  coverage_runner.py  lint_runner.py  models.py  sandbox.py  security_runner.py  test_runner.py
infra/ray/: actors.py  cluster.py  runtime.py  scheduler.py  tasks.py
infra/redis/: webhook_queue.py
infra/repo_worker/: git_utils.py  sandbox.py  worker.py  workspace.py
infra/slack/: notification.py
infra/storage/: artifacts.py  db.py  dead_letter.py  engine.py  models.py  review_requests.py  schema.py
observability/: logging.py  metrics.py  tracing.py
tests/: conftest.py
tests/e2e/: test_webhook_pipeline_flow.py
tests/integration/: test_coordinator.py  test_github_auth_and_issues.py  test_github_client.py  test_github_webhook_handler.py  test_observability_tracing.py  test_pipeline_steps.py  test_redis_webhook_queue.py  (+2 more)
(+75 files in other folders)
