[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopr"
version = "0.1.0"
description = "Autonomous issue-to-merge system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "PyYAML>=6.0.2",
  "PyJWT>=2.9.0",
  "ray[default]>=2.40.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "coverage>=7.6.0",
  "bandit>=1.7.9",
  "redis>=5.2.0",
  "opentelemetry-api>=1.42.0",
  "opentelemetry-sdk>=1.42.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.42.0",
  "prometheus-client>=0.20.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
  "asyncpg>=0.29.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "types-PyYAML>=6.0.12"
]

llm = [
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "langchain-ollama>=1.1.0",
  "langchain-classic>=0.1.0",
  "langchain-anthropic>=1.1.0",
  "langchain-openrouter>=0.2.0",
  "langchain-openai>=1.1.0",
  "langchain-google-genai>=1.1.0"
]

[project.scripts]
autopr-git = "apps.cli.github_ops:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "apps*",
  "core*",
  "infra*",
  "pipelines*",
  "observability*",
  "configs*"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "unit: isolated tests for pure logic and local behavior",
  "integration: cross-module tests using fakes/mocks for boundaries",
  "e2e: end-to-end tests against the running stack",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
